# nbastats

./: gui.py  pyproject.toml  requirements.txt  scrape_nba.py  setup.py  sort_data.py
nbastats/: scrape_nba.py
nbastats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
testfiles/: dataframe.json
unused/: bball_ref_test.py  html_bballref.txt  old_menu.py  old_sort_stats.py  olddriver_nba.py  older_scrape_nba.py  otput.txt  playerdata.txt  playernames.txt  scrape_specs.json
